--- a/docs/core/migration/20-21.md
+++ b/docs/core/migration/20-21.md
@@ -3,13 +3,13 @@ title: .NET Core 2.0에서 2.1로 마이그레이션
 description: .NET Core 2.0 앱을 2.1로 업그레이드하는 방법을 알아봅니다.
 author: mairaw
 ms.author: mairaw
-ms.date: 06/18/2018
-ms.openlocfilehash: dd38dfef810c3d14ccfead35b47147ea5db50c6f
-ms.sourcegitcommit: c217b067985905cb21eafc5dd9a83568d7ff4e45
+ms.date: 08/06/2018
+ms.openlocfilehash: 9695935fb50652d30996afbd669493e50d590e74
+ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 06/22/2018
-ms.locfileid: "36315214"
+ms.lasthandoff: 09/02/2018
+ms.locfileid: "43404985"
 ---
 # <a name="migrate-from-net-core-20-to-21"></a>.NET Core 2.0에서 2.1로 마이그레이션
 
@@ -27,12 +27,24 @@ ms.locfileid: "36315214"
 
 * .NET Core 2.1 SDK(v 2.1.300 이상)에 번들로 제공되는 도구의 `<DotNetCliToolReference>` 참조를 제거합니다. 이러한 참조에는 다음이 포함됩니다.
 
-  * [dotnet-watch](https://github.com/aspnet/DotNetTools/blob/dev/src/dotnet-watch/README.md)(Microsoft.DotNet.Watcher.Tools)
-  * [dotnet-user-secrets](https://github.com/aspnet/DotNetTools/blob/dev/src/dotnet-user-secrets/README.md)(Microsoft.Extensions.SecretManager.Tools)
-  * [dotnet-sql-cache](https://github.com/aspnet/DotNetTools/blob/dev/src/dotnet-sql-cache/README.md)(Microsoft.Extensions.Caching.SqlConfig.Tools)
+  * [dotnet-watch](https://github.com/aspnet/DotNetTools/blob/master/src/dotnet-watch/README.md)(Microsoft.DotNet.Watcher.Tools)
+  * [dotnet-user-secrets](https://github.com/aspnet/DotNetTools/blob/master/src/dotnet-user-secrets/README.md)(Microsoft.Extensions.SecretManager.Tools)
+  * [dotnet-sql-cache](https://github.com/aspnet/DotNetTools/blob/master/src/dotnet-sql-cache/README.md)(Microsoft.Extensions.Caching.SqlConfig.Tools)
   * [dotnet-ef](/ef/core/miscellaneous/cli/dotnet)(Microsoft.EntityFrameworkCore.Tools.DotNet)
+  
+  이전 .NET Core SDK 버전에서는 프로젝트 파일에 있는 이러한 도구 중 하나에 대한 참조는 다음 예제와 유사합니다.
+
+  ```xml
+  <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
+  ```
+
+  이 항목은 .NET Core SDK에서 더 이상 사용되지 않으므로, 프로젝트에 이러한 번들 도구 중 하나에 대한 참조가 있는 경우 다음과 유사한 경고가 표시됩니다.
+  
+  `The tool 'Microsoft.EntityFrameworkCore.Tools.DotNet' is now included in the .NET Core SDK. Here is information on resolving this warning.`
+  
+  프로젝트에서 해당 도구에 대한 `<DotNetCliToolReference>` 참조를 제거하면 이 문제가 해결됩니다.
 
 ## <a name="see-also"></a>참고 항목
 
-[ASP.NET Core 2.0에서 2.1로 마이그레이션](/aspnet/core/migration/20_21)  
-[.NET Core 2.1의 새로운 기능](../whats-new/dotnet-core-2-1.md)  
+* [ASP.NET Core 2.0에서 2.1로 마이그레이션](/aspnet/core/migration/20_21)  
+* [.NET Core 2.1의 새로운 기능](../whats-new/dotnet-core-2-1.md)  
