--- a/docs/csharp/language-reference/compiler-messages/cs0019.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0019.md
@@ -6,24 +6,26 @@ f1_keywords:
 helpviewer_keywords:
 - CS0019
 ms.assetid: 5a25be41-535b-4850-a230-9a385e01fd20
-ms.openlocfilehash: 99de26e3c8d4fef37c215c4a7750ad2be76af92f
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 78621748eb3654f4395a5cc4965c1875bdfdb59e
+ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33213700"
+ms.lasthandoff: 09/01/2018
+ms.locfileid: "43388761"
 ---
 # <a name="compiler-error-cs0019"></a>컴파일러 오류 CS0019
+
 ‘operator’ 연산자는 ‘type’ 및 ‘type’ 형식의 피연산자에 적용할 수 없습니다.  
   
  이항 연산자가 지원하지 않는 데이터 형식에 적용되었습니다. 예를 들어 문자열에 [&#124;&#124;](../../../csharp/language-reference/operators/conditional-or-operator.md) 연산자를 사용할 수 없으며, [bool](../../../csharp/language-reference/keywords/bool.md) 변수에 [+](../../../csharp/language-reference/operators/addition-operator.md) , [-](../../../csharp/language-reference/operators/subtraction-operator.md) , [\<](../../../csharp/language-reference/operators/less-than-operator.md) 또는 [>](../../../csharp/language-reference/operators/greater-than-operator.md) 연산자를 사용할 수 없습니다. 또한 형식이 연산자를 명사적으로 오버로드하는 경우가 아니면 `struct` 형식에 [==](../../../csharp/language-reference/operators/equality-comparison-operator.md) 연산자를 사용할 수 없습니다.  
   
- 클래스 형식에서 이 오류가 발생할 경우 클래스가 연산자를 오버로드하지 않기 때문입니다. 자세한 내용은 [오버로드할 수 있는 연산자](../../../csharp/programming-guide/statements-expressions-operators/overloadable-operators.md)를 참조하세요.  
+ 클래스 형식에서 이 오류가 발생할 경우 클래스가 연산자를 오버로드하지 않기 때문입니다. 자세한 내용은 [연산자](../../../csharp/language-reference/keywords/operator.md) 키워드 문서 및 [오버로드할 수 있는 연산자](../../../csharp/programming-guide/statements-expressions-operators/overloadable-operators.md)를 참조하세요.  
   
-## <a name="example"></a>예  
+## <a name="example"></a>예
+
  다음 예제에서는 C#의 [bool](../../../csharp/language-reference/keywords/bool.md)을 [int](../../../csharp/language-reference/keywords/int.md)로 변환할 수 없기 때문에 CS0019가 두 위치에서 생성됩니다. 빼기 연산자를 문자열에 적용할 때도 CS0019가 생성됩니다. 더하기 연산자(+)는 `String` 클래스로 오버로드되어 문자열 연결을 수행하기 때문에 문자열 피연산자와 함께 사용할 수 있습니다.  
-  
-```csharp  
+
+```csharp
 static void Main()  
 {  
     bool result = true;  
@@ -39,8 +41,8 @@ static void Main()
         //Do something...  
     }  
   
-    // The following use of == causes no error. It is the comparison of  
-    // an integer and a boolean value that causes the error in the   
+    // The following use of == causes no error. It is the comparison of
+    // an integer and a boolean value that causes the error in the
     // previous if statement.  
     if (result == true)  
     {  
@@ -50,14 +52,15 @@ static void Main()
     string s = "Just try to subtract me.";  
     float f = 100 - s; // CS0019  
 }  
-```  
-  
-## <a name="example"></a>예  
+```
+
+## <a name="example"></a>예
+
  다음 예제에서는 <xref:System.Diagnostics.ConditionalAttribute> 외부에서 조건부 논리를 지정해야 합니다. 미리 정의된 기호 하나만 <xref:System.Diagnostics.ConditionalAttribute>에 전달할 수 있습니다.  
   
  다음 샘플에서는 CS0019를 생성합니다.  
-  
-```csharp  
+
+```csharp
 // CS0019_a.cs  
 // compile with: /target:library  
 using System.Diagnostics;  
@@ -70,8 +73,9 @@ public class MyClass
    [ConditionalAttribute("DEBUG"), ConditionalAttribute("TRACE")]  
    public void TestMethod2() {}  
 }  
-```  
-  
-## <a name="see-also"></a>참고 항목  
- [연산자](../../../csharp/programming-guide/statements-expressions-operators/operators.md)  
- [암시적 숫자 변환 표](../../../csharp/language-reference/keywords/implicit-numeric-conversions-table.md)
+```
+
+## <a name="see-also"></a>참고 항목
+
+- [연산자](../../../csharp/programming-guide/statements-expressions-operators/operators.md)  
+- [암시적 숫자 변환 표](../../../csharp/language-reference/keywords/implicit-numeric-conversions-table.md)
