--- a/docs/csharp/language-reference/compiler-messages/cs1614.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1614.md
@@ -6,15 +6,15 @@ f1_keywords:
 helpviewer_keywords:
 - CS1614
 ms.assetid: 787eef18-74a6-49d9-9f34-f0881aca8dff
-ms.openlocfilehash: 6c0c0ed404fbbba7bc2999ce9cdae9f092259d44
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: f0fb0e1f2829f3e428083e7257fb150e3f651d81
+ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33211574"
+ms.lasthandoff: 09/03/2018
+ms.locfileid: "43461052"
 ---
 # <a name="compiler-error-cs1614"></a>컴파일러 오류 CS1614
-‘attribute1’ 및 ‘attribute2’ 사이에서 ‘name’이 모호합니다. ‘@attribute’ 또는 ‘attributeAttribute’를 사용하세요.  
+'name'은 'name'과 'nameAttribute' 사이에 모호합니다. '@name' 또는 'nameAttribute'를 사용합니다.
   
  컴파일러에 모호한 특성 사양 문제가 발생했습니다.  
   
