--- a/docs/csharp/language-reference/compiler-messages/cs1614.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1614.md
@@ -6,21 +6,21 @@ f1_keywords:
 helpviewer_keywords:
 - CS1614
 ms.assetid: 787eef18-74a6-49d9-9f34-f0881aca8dff
-ms.openlocfilehash: 6c0c0ed404fbbba7bc2999ce9cdae9f092259d44
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: f0fb0e1f2829f3e428083e7257fb150e3f651d81
+ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33211574"
+ms.lasthandoff: 09/03/2018
+ms.locfileid: "43461052"
 ---
-# <a name="compiler-error-cs1614"></a><span data-ttu-id="35fb1-102">컴파일러 오류 CS1614</span><span class="sxs-lookup"><span data-stu-id="35fb1-102">Compiler Error CS1614</span></span>
-<span data-ttu-id="35fb1-103">‘attribute1’ 및 ‘attribute2’ 사이에서 ‘name’이 모호합니다.</span><span class="sxs-lookup"><span data-stu-id="35fb1-103">'name' is ambiguous; between 'attribute1' and 'attribute2'.</span></span> <span data-ttu-id="35fb1-104">‘@attribute’ 또는 ‘attributeAttribute’를 사용하세요.</span><span class="sxs-lookup"><span data-stu-id="35fb1-104">use either '@attribute' or 'attributeAttribute'</span></span>  
+# <a name="compiler-error-cs1614"></a><span data-ttu-id="95715-102">컴파일러 오류 CS1614</span><span class="sxs-lookup"><span data-stu-id="95715-102">Compiler Error CS1614</span></span>
+<span data-ttu-id="95715-103">'name'은 'name'과 'nameAttribute' 사이에 모호합니다. '@name' 또는 'nameAttribute'를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="95715-103">'name' is ambiguous between 'name' and 'nameAttribute'; use either '@name' or 'nameAttribute'.</span></span>
   
- <span data-ttu-id="35fb1-105">컴파일러에 모호한 특성 사양 문제가 발생했습니다.</span><span class="sxs-lookup"><span data-stu-id="35fb1-105">The compiler has encountered an ambiguous attribute specification.</span></span>  
+ <span data-ttu-id="95715-104">컴파일러에 모호한 특성 사양 문제가 발생했습니다.</span><span class="sxs-lookup"><span data-stu-id="95715-104">The compiler has encountered an ambiguous attribute specification.</span></span>  
   
- <span data-ttu-id="35fb1-106">편의상 C# 컴파일러에서 **ExampleAttribute**를 단순히 `[Example]`로 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="35fb1-106">For convenience, the C# compiler allows you to specify **ExampleAttribute** as just `[Example]`.</span></span> <span data-ttu-id="35fb1-107">그러나 이름이 `Example`인 특성 클래스가 **ExampleAttribute**와 함께 존재하면 모호성이 발생합니다. 컴파일러가 `[Example]`의 참조 대상이 `Example` 특성인지 **ExampleAttribute** 특성인지 구분할 수 없기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="35fb1-107">However, ambiguity arises if an attribute class named `Example` exists along with **ExampleAttribute**, because the compiler cannot tell if `[Example]` refers to the `Example` attribute or the **ExampleAttribute** attribute.</span></span> <span data-ttu-id="35fb1-108">모호성을 해소하기 위해 `Example` 특성에는 `[@Example]`을, **ExampleAttribute**에는 `[ExampleAttribute]`를 사용하세요.</span><span class="sxs-lookup"><span data-stu-id="35fb1-108">To clarify, use `[@Example]` for the `Example` attribute and `[ExampleAttribute]` for **ExampleAttribute**.</span></span>  
+ <span data-ttu-id="95715-105">편의상 C# 컴파일러에서 **ExampleAttribute**를 단순히 `[Example]`로 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="95715-105">For convenience, the C# compiler allows you to specify **ExampleAttribute** as just `[Example]`.</span></span> <span data-ttu-id="95715-106">그러나 이름이 `Example`인 특성 클래스가 **ExampleAttribute**와 함께 존재하면 모호성이 발생합니다. 컴파일러가 `[Example]`의 참조 대상이 `Example` 특성인지 **ExampleAttribute** 특성인지 구분할 수 없기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="95715-106">However, ambiguity arises if an attribute class named `Example` exists along with **ExampleAttribute**, because the compiler cannot tell if `[Example]` refers to the `Example` attribute or the **ExampleAttribute** attribute.</span></span> <span data-ttu-id="95715-107">모호성을 해소하기 위해 `Example` 특성에는 `[@Example]`을, **ExampleAttribute**에는 `[ExampleAttribute]`를 사용하세요.</span><span class="sxs-lookup"><span data-stu-id="95715-107">To clarify, use `[@Example]` for the `Example` attribute and `[ExampleAttribute]` for **ExampleAttribute**.</span></span>  
   
- <span data-ttu-id="35fb1-109">다음 샘플에서는 CS1614 오류가 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="35fb1-109">The following sample generates CS1614:</span></span>  
+ <span data-ttu-id="95715-108">다음 샘플에서는 CS1614 오류가 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="95715-108">The following sample generates CS1614:</span></span>  
   
 ```csharp  
 // CS1614.cs  
