--- a/docs/csharp/language-reference/compiler-messages/cs1029.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1029.md
@@ -6,19 +6,19 @@ f1_keywords:
 helpviewer_keywords:
 - CS1029
 ms.assetid: 61bd4d44-9bfc-42bb-a9f0-a0683da53640
-ms.openlocfilehash: 4e4af4925488aecdc4038a4d3f05712d0878ff16
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 311f9010c3b06a91f9bcc85888c6100ee6c0bc06
+ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33210891"
+ms.lasthandoff: 09/04/2018
+ms.locfileid: "43524264"
 ---
-# <a name="compiler-error-cs1029"></a><span data-ttu-id="016d4-102">컴파일러 오류 CS1029</span><span class="sxs-lookup"><span data-stu-id="016d4-102">Compiler Error CS1029</span></span>
-<span data-ttu-id="016d4-103">\#오류: ‘text’</span><span class="sxs-lookup"><span data-stu-id="016d4-103">\#error: 'text'</span></span>  
+# <a name="compiler-error-cs1029"></a><span data-ttu-id="d1d3b-102">컴파일러 오류 CS1029</span><span class="sxs-lookup"><span data-stu-id="d1d3b-102">Compiler Error CS1029</span></span>
+<span data-ttu-id="d1d3b-103">\#오류: ‘text’</span><span class="sxs-lookup"><span data-stu-id="d1d3b-103">\#error: 'text'</span></span>  
   
- <span data-ttu-id="016d4-104">[#error](../../../csharp/language-reference/preprocessor-directives/preprocessor-error.md) 지시문을 사용하여 정의된 오류 텍스트를 표시합니다.</span><span class="sxs-lookup"><span data-stu-id="016d4-104">Displays the text of an error defined with the [#error](../../../csharp/language-reference/preprocessor-directives/preprocessor-error.md) directive.</span></span>  
+ <span data-ttu-id="d1d3b-104">[#error](../../../csharp/language-reference/preprocessor-directives/preprocessor-error.md) 지시문을 사용하여 정의된 오류 텍스트를 표시합니다.</span><span class="sxs-lookup"><span data-stu-id="d1d3b-104">Displays the text of an error defined with the [#error](../../../csharp/language-reference/preprocessor-directives/preprocessor-error.md) directive.</span></span>  
   
- <span data-ttu-id="016d4-105">다음 샘플에는 사용자 정의 오류를 만드는 방법을 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="016d4-105">The following sample shows how to create a user-defined error:</span></span>  
+ <span data-ttu-id="d1d3b-105">다음 샘플에는 사용자 정의 오류를 만드는 방법을 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="d1d3b-105">The following sample shows how to create a user-defined error:</span></span>  
   
 ```csharp  
 // CS1029.cs  
@@ -29,4 +29,9 @@ class Sample
       #error Let's give an error here   // CS1029  
    }  
 }  
+```
+<span data-ttu-id="d1d3b-106">컴파일은 다음 출력을 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="d1d3b-106">Compilation produces the following output:</span></span>
+
+```console
+example.cs(9,8): error CS1029: #error: 'DEBUG is defined'
 ```
