--- a/docs/visual-basic/misc/bc32111.md
+++ b/docs/visual-basic/misc/bc32111.md
@@ -8,31 +8,31 @@ helpviewer_keywords:
 - BC32111
 ms.assetid: b03b5840-5318-4844-b2da-1bca4c28d097
 ms.openlocfilehash: 8ee2e32e92a01b22565b69441646f6a2b65d9b46
-ms.sourcegitcommit: c7f3e2e9d6ead6cc3acd0d66b10a251d0c66e59d
+ms.sourcegitcommit: 6eac9a01ff5d70c6d18460324c016a3612c5e268
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/08/2018
-ms.locfileid: "44204749"
+ms.lasthandoff: 09/15/2018
+ms.locfileid: "45640750"
 ---
-# <a name="indirect-constraint-39ltconstraint1gt39-obtained-from-the-type-parameter-constraint-39lttypeparameter1gt39-conflicts-with-the-constraint-39ltconstraint2gt39"></a><span data-ttu-id="b7818-102">간접 제약 조건 &#39; &lt;constraint1&gt; &#39; 형식 매개 변수 제약 조건에서 가져온 &#39; &lt;typeparameter1&gt; &#39; 제약 조건과 충돌 합니다 &#39; &lt;constraint2&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="b7818-102">Indirect constraint &#39;&lt;constraint1&gt;&#39; obtained from the type parameter constraint &#39;&lt;typeparameter1&gt;&#39; conflicts with the constraint &#39;&lt;constraint2&gt;&#39;</span></span>
-<span data-ttu-id="b7818-103">제네릭 형식이 직접 및 간접 제약 조건의 조합으로 인해 충돌하는 제약 조건으로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="b7818-103">A generic type is declared with conflicting constraints due to a combination of direct and indirect constraints.</span></span>  
+# <a name="indirect-constraint-39ltconstraint1gt39-obtained-from-the-type-parameter-constraint-39lttypeparameter1gt39-conflicts-with-the-constraint-39ltconstraint2gt39"></a><span data-ttu-id="cc1a7-102">간접 제약 조건 &#39; &lt;constraint1&gt; &#39; 형식 매개 변수 제약 조건에서 가져온 &#39; &lt;typeparameter1&gt; &#39; 제약 조건과 충돌 합니다 &#39; &lt;constraint2&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="cc1a7-102">Indirect constraint &#39;&lt;constraint1&gt;&#39; obtained from the type parameter constraint &#39;&lt;typeparameter1&gt;&#39; conflicts with the constraint &#39;&lt;constraint2&gt;&#39;</span></span>
+<span data-ttu-id="cc1a7-103">제네릭 형식이 직접 및 간접 제약 조건의 조합으로 인해 충돌하는 제약 조건으로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="cc1a7-103">A generic type is declared with conflicting constraints due to a combination of direct and indirect constraints.</span></span>  
   
- <span data-ttu-id="b7818-104">다음 문은 이 오류를 생성할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="b7818-104">The following statement can generate this error.</span></span>  
+ <span data-ttu-id="cc1a7-104">다음 문은 이 오류를 생성할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="cc1a7-104">The following statement can generate this error.</span></span>  
   
  `Public Class testClass(Of t1 As {t2, Class}, t2 As Structure)`  
   
- <span data-ttu-id="b7818-105">간접 제약 조건 `Structure` 및 직접 제약 조건 `Class` 으로 인해 형식 매개 변수 `t1`에 대한 충돌이 발생합니다. 그 이유는 해당 형식 인수가 `Structure` 제약 조건에서는 값 형식이어야 하고 `Class` 에서는 참조 형식이어야 하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="b7818-105">The indirect constraint `Structure` and the direct constraint `Class` cause a conflict for type parameter `t1`, because the `Structure` constraint requires that the corresponding type argument be a value type, while `Class` requires that it be a reference type.</span></span>  
+ <span data-ttu-id="cc1a7-105">간접 제약 조건 `Structure` 및 직접 제약 조건 `Class` 으로 인해 형식 매개 변수 `t1`에 대한 충돌이 발생합니다. 그 이유는 해당 형식 인수가 `Structure` 제약 조건에서는 값 형식이어야 하고 `Class` 에서는 참조 형식이어야 하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="cc1a7-105">The indirect constraint `Structure` and the direct constraint `Class` cause a conflict for type parameter `t1`, because the `Structure` constraint requires that the corresponding type argument be a value type, while `Class` requires that it be a reference type.</span></span>  
   
- <span data-ttu-id="b7818-106">**오류 ID:** BC32111</span><span class="sxs-lookup"><span data-stu-id="b7818-106">**Error ID:** BC32111</span></span>  
+ <span data-ttu-id="cc1a7-106">**오류 ID:** BC32111</span><span class="sxs-lookup"><span data-stu-id="cc1a7-106">**Error ID:** BC32111</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b7818-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b7818-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="cc1a7-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="cc1a7-107">To correct this error</span></span>  
   
--   <span data-ttu-id="b7818-108">제약 조건의 충돌을 방지하려면 형식 매개 변수 제약 조건을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="b7818-108">Change the type parameter constraints to avoid conflicting constraints.</span></span>  
+-   <span data-ttu-id="cc1a7-108">제약 조건의 충돌을 방지하려면 형식 매개 변수 제약 조건을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="cc1a7-108">Change the type parameter constraints to avoid conflicting constraints.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b7818-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="b7818-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="cc1a7-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="cc1a7-109">See also</span></span>
 
-- [<span data-ttu-id="b7818-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="b7818-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
-- [<span data-ttu-id="b7818-111">형식 목록</span><span class="sxs-lookup"><span data-stu-id="b7818-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)  
-- [<span data-ttu-id="b7818-112">구조체 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="b7818-112">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)  
-- [<span data-ttu-id="b7818-113">클래스 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="b7818-113">Class (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/class-statement.md)  
-- [<span data-ttu-id="b7818-114">값 형식과 참조 형식</span><span class="sxs-lookup"><span data-stu-id="b7818-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="cc1a7-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="cc1a7-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+- [<span data-ttu-id="cc1a7-111">형식 목록</span><span class="sxs-lookup"><span data-stu-id="cc1a7-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)  
+- [<span data-ttu-id="cc1a7-112">구조체 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="cc1a7-112">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)  
+- [<span data-ttu-id="cc1a7-113">클래스 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="cc1a7-113">Class (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/class-statement.md)  
+- [<span data-ttu-id="cc1a7-114">값 형식과 참조 형식</span><span class="sxs-lookup"><span data-stu-id="cc1a7-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
