--- a/docs/visual-basic/misc/bc36577.md
+++ b/docs/visual-basic/misc/bc36577.md
@@ -8,22 +8,22 @@ helpviewer_keywords:
 - BC36577
 ms.assetid: c16c5f56-fd41-4058-9d43-35e5c0f7bf03
 ms.openlocfilehash: fcc990decfac5b79279618fb102ac5520a9d2c00
-ms.sourcegitcommit: 6eac9a01ff5d70c6d18460324c016a3612c5e268
+ms.sourcegitcommit: 5bbfe34a9a14e4ccb22367e57b57585c208cf757
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/14/2018
-ms.locfileid: "45591045"
+ms.lasthandoff: 09/17/2018
+ms.locfileid: "45746142"
 ---
-# <a name="anonymous-type-initializers-are-not-valid-in-debug-windows"></a><span data-ttu-id="e723c-102">디버그 창에서는 무명 형식 이니셜라이저를 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="e723c-102">Anonymous type initializers are not valid in debug windows</span></span>
-<span data-ttu-id="e723c-103">디버깅 세션 중 **조사식** 또는 **직접 실행** 창에 무명 형식 이니셜라이저가 입력되었습니다.</span><span class="sxs-lookup"><span data-stu-id="e723c-103">An anonymous type initializer has been entered in the **Watch** or **Immediate** window during a debugging session.</span></span> <span data-ttu-id="e723c-104">무명 형식 이니셜라이저는 디버깅 창에서 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="e723c-104">Anonymous type initializers are not available in debugging windows.</span></span>  
+# <a name="anonymous-type-initializers-are-not-valid-in-debug-windows"></a><span data-ttu-id="03d91-102">디버그 창에서는 무명 형식 이니셜라이저를 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="03d91-102">Anonymous type initializers are not valid in debug windows</span></span>
+<span data-ttu-id="03d91-103">디버깅 세션 중 **조사식** 또는 **직접 실행** 창에 무명 형식 이니셜라이저가 입력되었습니다.</span><span class="sxs-lookup"><span data-stu-id="03d91-103">An anonymous type initializer has been entered in the **Watch** or **Immediate** window during a debugging session.</span></span> <span data-ttu-id="03d91-104">무명 형식 이니셜라이저는 디버깅 창에서 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="03d91-104">Anonymous type initializers are not available in debugging windows.</span></span>  
   
- <span data-ttu-id="e723c-105">**오류 ID:** BC36577</span><span class="sxs-lookup"><span data-stu-id="e723c-105">**Error ID:** BC36577</span></span>  
+ <span data-ttu-id="03d91-105">**오류 ID:** BC36577</span><span class="sxs-lookup"><span data-stu-id="03d91-105">**Error ID:** BC36577</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e723c-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="e723c-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="03d91-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="03d91-106">To correct this error</span></span>  
   
--   <span data-ttu-id="e723c-107">코드 편집기에서 무명 형식 이니셜라이저를 테스트합니다.</span><span class="sxs-lookup"><span data-stu-id="e723c-107">Test anonymous type initializers in the Code Editor.</span></span>  
+-   <span data-ttu-id="03d91-107">코드 편집기에서 무명 형식 이니셜라이저를 테스트합니다.</span><span class="sxs-lookup"><span data-stu-id="03d91-107">Test anonymous type initializers in the Code Editor.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e723c-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="e723c-108">See Also</span></span>  
- [<span data-ttu-id="e723c-109">익명 형식</span><span class="sxs-lookup"><span data-stu-id="e723c-109">Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)  
- [<span data-ttu-id="e723c-110">자세히 보기: What If... 직접 실행 창에서 코드를 테스트</span><span class="sxs-lookup"><span data-stu-id="e723c-110">Closer Look: What If... Testing Code in the Immediate Window</span></span>](https://msdn.microsoft.com/library/3613a627-09a4-44e1-9cc2-f2a29f4e0744)  
- [<span data-ttu-id="e723c-111">Visual Basic 응용 프로그램 디버깅</span><span class="sxs-lookup"><span data-stu-id="e723c-111">Debugging Your Visual Basic Application</span></span>](../../visual-basic/developing-apps/debugging.md)
+## <a name="see-also"></a><span data-ttu-id="03d91-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="03d91-108">See Also</span></span>  
+ [<span data-ttu-id="03d91-109">익명 형식</span><span class="sxs-lookup"><span data-stu-id="03d91-109">Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)  
+ [<span data-ttu-id="03d91-110">자세히 보기: What If... 직접 실행 창에서 코드를 테스트</span><span class="sxs-lookup"><span data-stu-id="03d91-110">Closer Look: What If... Testing Code in the Immediate Window</span></span>](https://msdn.microsoft.com/library/3613a627-09a4-44e1-9cc2-f2a29f4e0744)  
+ [<span data-ttu-id="03d91-111">Visual Basic 응용 프로그램 디버깅</span><span class="sxs-lookup"><span data-stu-id="03d91-111">Debugging Your Visual Basic Application</span></span>](../../visual-basic/developing-apps/debugging.md)
